--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "markdown-table": "^1.1.3",
     "node-fetch": "^2.6.0"
   },
-  "npm-stats": "cleartax",
+  "npm-stats": "artiely",
   "dependencies": {
     "npmtotal": "^1.4.0"
   }
